Minor improvements to the not responding dialog

https://bugzilla.gnome.org/show_bug.cgi?id=684306